solutions/5-security/gatekeeper-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-team-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
      - "kube-*"
      - "kuttl-*"
      - "gatekeeper-system"
      - "local-path-storage"
  parameters:
    labels: ["team"]
